--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="main-container">
-    <div class="qr-pic"></div>
+    <div class="QR"></div>
     <div class="text">
       <p class="firstText">Improve your front-end skills by building projects</p>
 
