--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 <body>
   <div class="main-container">
     <div class="QR"></div>
-    <div class="text">
-      <p class="firstText">Improve your front-end skills by building projects</p>
-
-      <p class="secondText">Scan the QR code to visit Frontend Mentor and take 
-      your coding skills to the next level</p>
-    </div>
+    <div class="firstText">Improve your front-end skills by building projects</div>
+    <div class="secondText">Scan the QR code to visit Frontend Mentor and take 
+      your coding skills to the next level</div>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
