--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
+  <div class="header"></div>
   <div class="main-container">
     <div class="QR"></div>
     <div class="firstText">Improve your front-end skills by building projects</div>
     <div class="secondText">Scan the QR code to visit Frontend Mentor and take 
       your coding skills to the next level</div>
   </div>
+  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>     
+  </div>
+  <div class="coded">
     Coded by <a href="#">Mister G.</a>
   </div>
+  
 </body>
 </html>
