--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
       your coding skills to the next level</div>
   </div>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>     
-  </div>
   <div class="coded">
-    Coded by <a href="#">Mister G.</a>
+    Coded by <a href="https://github.com/Gary-B-Rich">Mister G.</a>
   </div>
   
 </body>
